--- a/Enfoca/Features/Home/Home.storyboard
+++ b/Enfoca/Features/Home/Home.storyboard
@@ -10,6 +10,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--DictionarySelection-->
+        <scene sceneID="9Vf-iX-B3e">
+            <objects>
+                <viewControllerPlaceholder storyboardName="DictionarySelection" id="Jed-ek-EHi" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wz4-LC-gck" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-762" y="589"/>
+        </scene>
         <!--Home View Controller-->
         <scene sceneID="WFp-p5-r45">
             <objects>
@@ -106,11 +114,21 @@
                                             <constraint firstAttribute="height" constant="2" id="QSg-rn-Gg8"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="62D-vP-Co8">
+                                        <rect key="frame" x="8" y="30" width="34" height="30"/>
+                                        <state key="normal" title="Back">
+                                            <color key="titleColor" red="0.86644273999999999" green="0.87051200870000001" blue="0.8786925673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButtonAction:" destination="NWj-al-1U9" eventType="touchUpInside" id="aFS-lr-6yE"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="CSP-RR-jts" secondAttribute="trailing" id="VI5-mT-6qg"/>
                                     <constraint firstAttribute="bottom" secondItem="CSP-RR-jts" secondAttribute="bottom" id="fjg-iY-dUt"/>
+                                    <constraint firstItem="62D-vP-Co8" firstAttribute="leading" secondItem="gRr-TH-ntc" secondAttribute="leading" constant="8" id="inj-u1-sht"/>
                                     <constraint firstAttribute="height" constant="165" id="j6C-na-lbc"/>
                                     <constraint firstItem="CSP-RR-jts" firstAttribute="leading" secondItem="gRr-TH-ntc" secondAttribute="leading" id="kkV-yg-bFB"/>
                                 </constraints>
@@ -181,6 +199,7 @@
                             <constraint firstItem="VZW-bF-agk" firstAttribute="width" secondItem="7Ni-DN-MKS" secondAttribute="width" constant="-61" id="VDQ-Je-bCa"/>
                             <constraint firstItem="c26-yw-H9c" firstAttribute="top" secondItem="PYL-6A-Hq0" secondAttribute="bottom" constant="188" id="aKV-d0-Adq"/>
                             <constraint firstAttribute="trailing" secondItem="gRr-TH-ntc" secondAttribute="trailing" id="bDA-2T-wZz"/>
+                            <constraint firstItem="62D-vP-Co8" firstAttribute="baseline" secondItem="mgK-Ja-kbt" secondAttribute="baseline" id="c6G-JW-GIP"/>
                             <constraint firstItem="gRr-TH-ntc" firstAttribute="leading" secondItem="7Ni-DN-MKS" secondAttribute="leading" id="eYx-ZM-Fbm"/>
                             <constraint firstItem="xcw-QZ-dyr" firstAttribute="leading" secondItem="7Ni-DN-MKS" secondAttribute="leading" constant="8" id="gKb-Ee-5j4"/>
                             <constraint firstItem="dwd-qq-5mt" firstAttribute="leading" secondItem="7Ni-DN-MKS" secondAttribute="leading" constant="8" id="jKR-t3-B0Q"/>
@@ -215,6 +234,7 @@
                         <segue destination="U16-qW-lzJ" kind="show" identifier="BrowseViewControllerSegue" id="hti-2s-lZO"/>
                         <segue destination="seo-qB-PAl" kind="show" identifier="EditWordPairControllerSegue" id="car-vL-6vY"/>
                         <segue destination="9eU-n4-C5g" kind="show" identifier="QuizViewControllerSegue" id="Vst-SI-0fi"/>
+                        <segue destination="Jed-ek-EHi" kind="show" identifier="DictionarySelectionSeque" id="6XE-hn-gxj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="frR-PW-uCx" userLabel="First Responder" sceneMemberID="firstResponder"/>
